Some helper methods for Spree::User and show more info on users list of store credits.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,7 +46,9 @@ en:
         edit: "Editing store credit"
         back_to_user_list: "Back to user list"
         back_to_store_credit_list: "Back to store credit list"
+        authorized_html_header: "Amount<br/>Authorized"
         credited_html_header: "Amount<br/>Credited"
+        remaining_html_header: "Amount<br/>Remaining"
         used_html_header: "Amount<br/>Used"
         type_html_header: "Credit<br/>Type"
         created_by: "Created By"
